# Crawling_Stock_News

./: .env.example  README.md  pyproject.toml  test_feed.py
.github/workflows/: run-bot.yml
data/: sent_articles.json
src/stock_news_bot/: __init__.py  config.py  dedupe.py  fetcher.py  main.py  market.py  notifier.py  summarizer.py
src/stock_news_discord_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
