[project]
name = "stock-news-discord-bot"
version = "0.1.0"
description = "Fetch stock news, summarize in Korean, and send to Discord."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "openai>=1.109.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "trafilatura>=1.9.0",
]

[project.scripts]
stock-news-bot = "stock_news_bot.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
